--- a/site/package.json
+++ b/site/package.json
@@ -12,9 +12,9 @@
     "fastclick": "^1.0.6",
     "firebase": "^3.3.0",
     "history": "^3.0.0",
+    "moment": "^2.15.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
-    "react-mdl": "^1.6.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "whatwg-fetch": "^1.0.0"
