--- a/development/package.json
+++ b/development/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pedro-news",
+  "name": "couch-ref",
   "version": "1.0.0",
   "description": "",
   "main": "bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
