--- a/development/package.json
+++ b/development/package.json
@@ -35,6 +35,7 @@
     "react-markdown": "^2.4.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
     "redux": "^3.6.0"
   }
 }
