--- a/development/app/components/Matches/package.json
+++ b/development/app/components/Matches/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Matches",
+  "name": "MatchScreen",
   "version": "0.0.0",
   "private": true,
-  "main": "./Matches.js"
+  "main": "./LiveMatch.js"
 }
