--- a/development/package.json
+++ b/development/package.json
@@ -14,8 +14,10 @@
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.14.0",
     "css-loader": "^0.25.0",
+    "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
+    "path": "^0.12.7",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
