--- a/development/package.json
+++ b/development/package.json
@@ -23,12 +23,14 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "better-react-spinkit": "^2.0.0-4",
     "bootstrap": "^3.3.7",
     "cheet.js": "^0.3.3",
     "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
     "firebase": "^3.4.1",
     "history": "^4.2.0",
+    "inline-style-prefixer": "^2.0.4",
     "jquery": "^3.1.1",
     "markdown-it": "^8.0.0",
     "moment": "^2.15.1",
