--- a/development/package.json
+++ b/development/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "better-react-spinkit": "^2.0.0-4",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.3.0",
     "cheet.js": "^0.3.3",
     "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
@@ -35,6 +36,7 @@
     "markdown-it": "^8.0.0",
     "moment": "^2.15.1",
     "react": "^15.3.2",
+    "react-chartjs-2": "^1.3.0",
     "react-dom": "^15.3.2",
     "react-markdown": "^2.4.2",
     "react-redux": "^4.4.5",
