--- a/development/package.json
+++ b/development/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.3.0",
     "cheet.js": "^0.3.3",
     "classnames": "^2.2.5",
+    "d3": "^4.2.7",
     "fastclick": "^1.0.6",
     "firebase": "^3.4.1",
     "history": "^4.2.0",
@@ -38,6 +39,7 @@
     "react": "^15.3.2",
     "react-chartjs-2": "^1.3.0",
     "react-dom": "^15.3.2",
+    "react-faux-dom": "^3.0.0",
     "react-markdown": "^2.4.2",
     "react-redux": "^4.4.5",
     "react-responsive": "^1.1.5",
