--- a/development/package.json
+++ b/development/package.json
@@ -34,6 +34,7 @@
     "history": "^4.2.0",
     "inline-style-prefixer": "^2.0.4",
     "jquery": "^3.1.1",
+    "js-cookie": "^2.1.3",
     "markdown-it": "^8.0.0",
     "moment": "^2.15.1",
     "react": "^15.3.2",
