--- a/development/package.json
+++ b/development/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^15.3.2",
     "react-faux-dom": "^3.0.0",
     "react-markdown": "^2.4.2",
+    "react-measure": "^1.2.0",
     "react-redux": "^4.4.5",
     "react-responsive": "^1.1.5",
     "react-router": "^2.8.1",
