--- a/development/package.json
+++ b/development/package.json
@@ -41,7 +41,7 @@
     "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-chartjs-2": "^1.3.0",
-    "react-datepicker": "^0.33.0",
+    "react-date-picker": "^5.3.28",
     "react-dom": "^15.3.2",
     "react-faux-dom": "^3.0.0",
     "react-markdown": "^2.4.2",
