--- a/development/package.json
+++ b/development/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "",
   "devDependencies": {
+    "autoprefixer": "^6.5.2",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-react-jsx": "^6.8.0",
@@ -19,6 +20,9 @@
     "json-loader": "^0.5.4",
     "node-sass": "^3.10.1",
     "path": "^0.12.7",
+    "postcss-loader": "^1.1.0",
+    "postcss-smart-import": "^0.5.1",
+    "precss": "^1.4.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
