--- a/tools/scores/package.json
+++ b/tools/scores/package.json
@@ -13,6 +13,7 @@
     "firebase": "^3.6.0",
     "firebase-admin": "^4.0.1",
     "get-stdin": "^5.0.1",
+    "lodash": "^4.17.2",
     "yargs": "^6.4.0"
   }
 }
