--- a/development/package.json
+++ b/development/package.json
@@ -23,6 +23,7 @@
     "postcss-loader": "^1.1.0",
     "postcss-smart-import": "^0.5.1",
     "precss": "^1.4.0",
+    "redux-immutable-state-invariant": "^1.2.4",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -54,6 +55,7 @@
     "react-responsive": "^1.1.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
