--- a/development/package.json
+++ b/development/package.json
@@ -38,6 +38,7 @@
     "d3": "^4.2.7",
     "fastclick": "^1.0.6",
     "firebase": "^3.4.1",
+    "frozen-moment": "^0.4.0",
     "history": "^4.2.0",
     "inline-style-prefixer": "^2.0.4",
     "jquery": "^3.1.1",
