--- a/development/package.json
+++ b/development/package.json
@@ -26,6 +26,7 @@
     "redux-immutable-state-invariant": "^1.2.4",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "surge": "^0.18.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   },
