--- a/circle.yml
+++ b/circle.yml
@@ -5,4 +5,5 @@ deployment:
   release:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
+      - echo "{\"version\":\"$CIRCLE_TAG\"}" > ./development/version.json
       - cd development && make prod publish
