--- a/circle.yml
+++ b/circle.yml
@@ -6,4 +6,4 @@ deployment:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - echo "{\"version\":\"$CIRCLE_TAG\"}" > ./version.json
-      - cd development && make prod publish
+      - make prod publish
