--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,4 @@ deployment:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - echo "{\"version\":\"$CIRCLE_TAG\"}" > ./version.json
-      - make prod publish
+      - npm run deploy
