--- a/development/package.json
+++ b/development/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "bundle.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "deploy": "webpack -p --config webpack.config.prod.js --progress --colors && cd ../public && cp index.html 200.html && surge"
   },
   "author": "",
   "license": "",
@@ -65,9 +66,6 @@
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
-  },
-  "scripts": {
-     "deploy": "webpack -p --config webpack.config.prod.js --progress --colors && cd ../public && cp index.html 200.html && surge"
   },
   "jest": {
     "moduleNameMapper": {
