--- a/development/package.json
+++ b/development/package.json
@@ -5,7 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "test": "jest",
-    "deploy": "webpack -p --config webpack.config.prod.js --progress --colors && cd ../public && cp index.html 200.html && surge"
+    "deploy": "webpack -p --config webpack.config.prod.js --progress --colors && cd ../public && cp index.html 200.html && surge -p ."
   },
   "author": "",
   "license": "",
@@ -24,7 +24,6 @@
     "jest": "^17.0.3",
     "json-loader": "^0.5.4",
     "node-sass": "^3.10.1",
-    "object-assign": "^4.1.0",
     "path": "^0.12.7",
     "postcss-loader": "^1.1.0",
     "postcss-smart-import": "^0.5.1",
