--- a/development/package.json
+++ b/development/package.json
@@ -28,6 +28,7 @@
     "postcss-loader": "^1.1.0",
     "postcss-smart-import": "^0.5.1",
     "precss": "^1.4.0",
+    "react-addons-test-utils": "^15.4.1",
     "react-test-renderer": "^15.4.1",
     "redux-immutable-state-invariant": "^1.2.4",
     "sass-loader": "^4.0.2",
