--- a/development/package.json
+++ b/development/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.25.0",
+    "enzyme": "^2.6.0",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "identity-obj-proxy": "^3.0.0",
@@ -56,7 +57,7 @@
     "react": "^15.4.1",
     "react-chartjs-2": "^1.3.0",
     "react-date-picker": "^5.3.28",
-    "react-dom": "^15.3.2",
+    "react-dom": "^15.4.1",
     "react-faux-dom": "^3.0.0",
     "react-markdown": "^2.4.2",
     "react-measure": "^1.2.0",
