--- a/development/package.json
+++ b/development/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "backstopjs": "^2.3.5",
     "css-loader": "^0.25.0",
     "enzyme": "^2.6.0",
     "express": "^4.14.0",
