--- a/development/package.json
+++ b/development/package.json
@@ -5,6 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "test": "jest",
+    "test:a11y": "pa11y http://localhost:9000",
     "deploy": "webpack -p --config webpack.config.prod.js --progress --colors && cd ../public && cp index.html 200.html && surge -p ."
   },
   "author": "",
@@ -25,6 +26,7 @@
     "jest": "^17.0.3",
     "json-loader": "^0.5.4",
     "node-sass": "^3.10.1",
+    "pa11y": "^4.2.0",
     "path": "^0.12.7",
     "postcss-loader": "^1.1.0",
     "postcss-smart-import": "^0.5.1",
