Adding canary deploy to master builds

--- a/circle.yml
+++ b/circle.yml
@@ -11,3 +11,9 @@ deployment:
     commands:
       - echo "{\"version\":\"$CIRCLE_TAG\"}" > ./version.json
       - npm run deploy
+  master:
+    branch: master
+    owner: circleci
+    commands:
+      - echo "{\"version\":\"$CIRCLE_TAG\"}" > ./version.json
+      - npm run canary
